tests/typechecker/should_fail/rename_4.csp
channel a : Bool
channel b : Bool

channel c : Int.Bool

P = STOP [[ a.true <- b ]]